--- a/style.css
+++ b/style.css
@@ -195,13 +195,13 @@ main {
     flex-direction: column;
 }
 
-.left .contact-front i {
+.left .contact-front i{
     font-size: 25px;
     /* display: flex; */
     flex-direction: row;
     /* gap: 0.8vw; */
     margin-right: 0.8vw;
-    color: #4B0082;
+    color: #aaaaaa;
 }
 
 .lineee {
@@ -255,20 +255,21 @@ main {
 }
 
 
-.btn {
+.btn1 {
     background-color: #c0c0c6;
     padding: 10px 20px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.336);
     text-decoration: none;
     color: black;
-    position: relative;
+    position: absolute;
     overflow: hidden;
-    margin-top: 3vh;
+    bottom: 19%;
     border: 3px solid #8A2BE2;
+    
 }
 
-.btn span {
+.btn1 span {
     position: relative;
     z-index: 1;
     background-color: transparent;
@@ -278,10 +279,10 @@ main {
     transition: 0.8s;
 }
 
-.btn::before {
+.btn1::before {
     content: "";
     position: absolute;
-    background-color: #000000;
+    background-color: #4B0082;
     color: #fff;
     width: 0;
     height: 0;
@@ -292,7 +293,53 @@ main {
     transition: width 0.7s, height 0.7s;
 }
 
-.btn:hover::before {
+.btn1:hover::before {
+    width: 300px;
+    height: 300px;
+}
+
+.btn2 {
+    position:absolute;
+    bottom: 19%;
+    z-index: -1;
+    opacity: 0;
+    /* display: none; */
+    background-color: #c0c0c6;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.336);
+    text-decoration: none;
+    color: black;
+    overflow: hidden;
+    border: 3px solid #45A29E;
+   
+}
+
+.btn2 span {
+    position: relative;
+    z-index: 1;
+    background-color: transparent;
+    color: #000;
+    font-size: 14px;
+    font-weight: 800;
+    transition: 0.8s;
+}
+
+.btn2::before {
+    content: "";
+    position: absolute;
+    background-color: #66FCF1;
+    color: #fff;
+    width: 0;
+    height: 0;
+    left: var(--xPos);
+    top: var(--yPos);
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    transition: width 0.7s, height 0.7s;
+}
+
+.btn2:hover::before {
     width: 300px;
     height: 300px;
 }
@@ -320,7 +367,7 @@ main {
     margin-bottom: 3vh;
     border-radius: 5px;
 }
-.page2 .center-top {
+.center-top {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -334,9 +381,11 @@ main {
     justify-content: space-between;
     height: 80%;
 }
+
 .page2 h3{
     font-size: 25px;
 }
+
 .page2 .left {
     margin-left: 5vw;
     margin-top: 30vh;
@@ -371,8 +420,9 @@ main {
 
 .page2 .right .skill-btn {
     padding: 1vw 4vh;
-    background-color: var(--lightmain);
+    background-color: #4B0082;
     color: white;
+    font-weight: 900;
     border-radius: 10%;
 }
 
@@ -385,8 +435,18 @@ main {
     gap: 4vh;
     flex-direction: column;
 }
+.page3 h1{
+    margin-top: 8vh;
+    margin-bottom: 3vh;
+}
+.page3 .lineee {
+    height: 6px;
+    width: 7rem;
+    margin-bottom: 3vh;
+    border-radius: 5px;
+}
 
-.project1 {
+.cp {
     width: 100%;
     display: flex;
     align-items: flex-start;
@@ -396,50 +456,55 @@ main {
     height: 30%;
 }
 
-.project1 .part1 {
-    width: 55%;
+.cp .left {
+    width: 50%;
     height: 100%;
     /* background-color: peru; */
 }
 
-.project1 .part1 h1 {
-    font-size: 18px;
+.cp .left h1 {
+    font-size: 20px;
     font-weight: 900;
 }
 
-.project1 .part1 p {
+.cp .left p {
     margin-top: 2vh;
-    font-size: 15px;
-    font-weight: 200;
+    font-size: 18px;
+    font-weight: 400;
 }
 
-.project1 .part2 {
+.cp .right {
     display: flex;
     gap: 3vw;
-    /* position: relative; */
-    /* align-items: center; */
     text-align: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     height: 100%;
-    width: 35%;
+    width: 45%;
+    margin-left: 7vw;
     /* background-color: rgb(253, 88, 88) ; */
 }
 
-.project1 .part2 img {
+.cp .right img {
     height: 3vw;
-
-    /* margin-left: 7vh; */
-    /* margin-left: 1.9vw; */
-    /* align-items: center; */
-
 }
 
-.project1 .part2 h2 {
-    font-size: 18px;
+.cp .right h2 {
+    font-size: 22px;
     text-align: center;
 }
-
-.project1 .part2 .seemore {
+.cp .right h3 {
+    font-size: 16px;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+}
+.cp .right h4 {
+    color:#4B0082;
+    font-size: 25px;
+    text-align: center;
+}
+.cp .right .seemore {
     margin-top: 7.23vh;
 }
 
